...
        <Button
            android:id="@+id/addExperimental"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_card"
            android:text="DENEYSEL SÖZLEŞME METADATA'SI EKLE"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
...
